[tool.poetry]
name = "grape-students-manager"
version = "0.1.0"
description = ""
authors = ["Konrad Zagozda <konrad.zagozda@grapeup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "1.1.4"
MarkupSafe = "2.0.1" # latest markupsafe isn't compatible with other flask 1.1.4 dependencies 
flask-sqlalchemy = "2.5.1"
flask-restx = "^1.1.0"
psycopg2 = "^2.9.6"
sqlalchemy = "^1.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
